=================
Changes for Crate
=================

Unreleased
==========

2015/10/07 0.50.7
=================

 - Fix: Prevent NPE in COPY FROM and INSERT FROM SUBQUERY queries
   when newly created shards are not available yet

 - Fixed an issue that causes a ClosedChannelException during BLOB download

 - Fixed a bug that causes a NaN response on _score system column in select
   statement that uses an ORDER BY clause

 - Fix: in some rare cases tables were not updated on every node after table
   schema changes

 - If the same table appears more than once in the FROM clause now an error is
   thrown instead of silently ignoring it.

 - Fixed a rare bug that leads to serialization issues when a ShardBulkRequest
   was serialized more than once

 - Fixed a bug that could cause imports from s3 result in an error instead of
   importing the data if the URI contained wildcards.

 - Improved Performance of LIKE and regexp queries

 - Fix: Order by ``_raw`` and/or ``_id`` did not work.

 - Fix: support compressed ``_source``

 - Fixed handling of non-deterministic functions

2015/09/15 0.50.6
=================

 - Display column names that contain a dot correctly in information schema
   and result column headers

 - Fixed an issue that could kill long running queries on shards with few
   segments containing huge amounts of documents

2015/08/28 0.50.5
=================

 - Fixed an issue that could cause `COPY FROM` to ignore a primary key
   constraint leading to duplicate rows.
   This could happen if a table has multiple primary keys and clustered by is
   set to one primary key column other than the first primary key column.

2015/08/27 0.50.4
=================

 - Fixed an issue that could cause long running operations to get killed

 - Fixed an issue where the `orphan_partition` column in the `sys.shards` table
   could return a wrong result if the shard was part of a custom table.
